--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>hello word</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque animi nobis laboriosam debitis! Nisi voluptate necessitatibus amet voluptas obcaecati neque asperiores, similique voluptatibus, praesentium blanditiis sit unde et aliquam tempore!</p>
 </body>
 </html>
