se agrego un div
se le agrego un Inicio,Nosotros,tienda,contacto

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <a href="#">Inicio</a>
+        <a href="#">Nosotros</a>
+        <a href="#">Tienda</a>
+        <a href="#">Contacto</a>
+    </div>
     <h1>hello word</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque animi nobis laboriosam debitis! Nisi voluptate necessitatibus amet voluptas obcaecati neque asperiores, similique voluptatibus, praesentium blanditiis sit unde et aliquam tempore!</p>
+
 </body>
 </html>
